🚧 renamed install function

--- a/bin/install
+++ b/bin/install
@@ -40,7 +40,7 @@ get_arch () {
 	echo -n $arch
 }
 
-get_download_url() {
+get_download_url () {
   	local version=$1
 	local platform=$2
 	local arch=$3
@@ -57,7 +57,7 @@ my_mktemp () {
 	echo -n $tempdir
 }
 
-install_step() {
+install () {
 	local install_type=$1
   	local version=$2
   	local install_path=$3
@@ -80,4 +80,4 @@ install_step() {
 	rm -rf $tempdir 
 }
 
-install_step $ASDF_INSTALL_TYPE $ASDF_INSTALL_VERSION $ASDF_INSTALL_PATH
+install $ASDF_INSTALL_TYPE $ASDF_INSTALL_VERSION $ASDF_INSTALL_PATH
